--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,17 @@
         </dependency>
         <dependency>
             <groupId>de.bloody9</groupId>
-            <artifactId>rolesection-feature</artifactId>
+            <artifactId>feature-rolesection</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>de.bloody9</groupId>
+            <artifactId>feature-formula</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>de.bloody9</groupId>
+            <artifactId>feature-application</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
