--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>de.bloody9</groupId>
             <artifactId>discord-core</artifactId>
-            <version>2.0.0-FINAL</version>
+            <version>2.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>de.bloody9</groupId>
